src/test/deca/context/invalid/provided/TestErreurPrint.deca
//erreur print
{
    boolean bool = true;
    println(bool);
}